--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Bbob</title>
 </head>
 <body>
-    <h1>asdasd</h1>
+    <h1>Click on the song to download</h1>
+    <div class="songs">
     <a href="Adele - Hello.mp3" download>Adele - Hello</a><br>
     <a href="Alan Walker - Alone.mp3" download>Alan Walker - Alone</a><br>
     <a href="Alan Walker - Faded.mp3" download>Alan Walker - Faded</a><br>
@@ -81,6 +83,7 @@
     <a href="Vegedream - Ramenez la coupe à la maison.mp3" download>Vegedream - Ramenez la coupe à la maison</a><br>
     <a href="Wiz Khalifa, Charlie Puth - See You Again (feat. Charlie Puth).mp3" download>Wiz Khalifa, Charlie Puth - See You Again (feat. Charlie Puth)</a><br>
     <a href="XXXTENTACION - Everybody Dies In Their Nightmares.mp3" download>XXXTENTACION - Everybody Dies In Their Nightmares</a><br>
-    <a href="ZAYN, Sia - Dusk Till Dawn (feat. Sia) - Radio Edit.mp3" download>ZAYN, Sia - Dusk Till Dawn (feat. Sia) - Radio Edit Version</a><br>
+    <a href="ZAYN, Sia - Dusk Till Dawn (feat. Sia) - Radio Edit.mp3" download>ZAYN, Sia - Dusk Till Dawn (feat. Sia) - Radio Edit</a><br>
+</div>
 </body>
 </html>
