--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Bbob</title>
+    <title>Bbob-songs</title>
 </head>
 <body>
     <h1>Click on the song to download</h1>
@@ -83,7 +83,7 @@
     <a href="Vegedream - Ramenez la coupe à la maison.mp3" download>Vegedream - Ramenez la coupe à la maison</a><br>
     <a href="Wiz Khalifa, Charlie Puth - See You Again (feat. Charlie Puth).mp3" download>Wiz Khalifa, Charlie Puth - See You Again (feat. Charlie Puth)</a><br>
     <a href="XXXTENTACION - Everybody Dies In Their Nightmares.mp3" download>XXXTENTACION - Everybody Dies In Their Nightmares</a><br>
-    <a href="ZAYN, Sia - Dusk Till Dawn (feat. Sia) - Radio Edit.mp3" download>ZAYN, Sia - Dusk Till Dawn (feat. Sia) - Radio_Edit</a><br>
+    <a href="ZAYN, Sia - Dusk Till Dawn (feat. Sia) - Radio Edit.mp3" download>ZAYN, Sia - Dusk Till Dawn (feat. Sia) - Radio Edit</a><br>
 </div>
 </body>
 </html>
