--- a/melisha.html
+++ b/melisha.html
@@ -22,9 +22,9 @@
       
     <main>
       <div class="horizontal-block">
-        <div class="column empty-column"><video autoplay loop src="mv1.mp4" style="height: fit-content;"></video><br>
-        <video autoplay loop src="mv2.mp4"></video><br>
-        <video autoplay loop src="mv3.mp4"></video>
+        <div class="column empty-column"><video muted autoplay loop src="mv1.mp4" style="height: fit-content;"></video><br>
+        <video muted autoplay loop src="mv2.mp4"></video><br>
+        <video muted autoplay loop src="mv3.mp4"></video>
     </div>
         <div class="column filled-column">
             <h2 style="text-align: center;">Happy Birthday</h2>
